--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.cdnfonts.com/css/press-start-2p");
+@import url("https://fonts.cdnfonts.com/css/abel");
+
+body {
+  font-family: "Abel", sans-serif;
+  font-size: 20px;
+}
 
 h1 {
   color: #ef6776 !important;
